# sd-webui-all-in-one

./: .gitignore  404.html  README.md  comfyui_colab.ipynb  comfyui_installer.md  comfyui_installer.ps1  configure_env.bat  fooocus_colab.ipynb  fooocus_config.json  fooocus_installer.md  fooocus_installer.ps1  fooocus_kaggle.ipynb  fooocus_path_config_colab.json  fooocus_path_config_kaggle.json  fooocus_zh_cn.json  hdm_train_kaggle.ipynb  index.html  install_embed_python.ps1  invokeai_colab.ipynb  invokeai_installer.md  invokeai_installer.ps1  invokeai_installer_test.ps1  pyproject.toml  sd_scripts_colab.ipynb  sd_scripts_ipynb_core.py  sd_scripts_kaggle.ipynb  sd_trainer_colab.ipynb  sd_trainer_installer.md  sd_trainer_installer.ps1  sd_trainer_kaggle.ipynb  sd_trainer_script_installer.md  sd_trainer_script_installer.ps1  sd_webui_all_in_one.ipynb  sd_webui_all_in_one.py  sd_webui_all_in_one_colab.ipynb  sd_webui_config.json  sd_webui_forge_classic_requirements_versions.txt  sd_webui_forge_requirements_versions.txt  search.json  stable_diffusion_webui_colab.ipynb  (+3 more)
.github/: FUNDING.yml  PSScriptAnalyzerSettings.psd1  archive_portable.ps1  build_sd_portable_download_link.py  build_sd_portable_download_page.py  check_installer_param_config.py  check_installer_version.ps1  check_ps1_encoding.py  clean_outdated_sd_portable.py  configure_comfyui_manager.py  download_python.py  gitee_release.py  github_release.sh  huggingface_release.py  install_ffmpeg.ps1  install_openpose_editor_assets.ps1  install_vae_approx_model.ps1  make_docs.py  modelscope_release.py  nvidia-smi.bat  pwsh_lint.ps1  python_code_to_psh.py  release_note.md  save_as_utf8_bom.py  sd_portable_downloader.ps1  set_ps1_default_powershell.ps1  update_portable_release_note.py  upload_portable_release.py
.github/download_page/: index.html  style.css
.github/workflows/: build_all_portable.yml  build_comfyui.yml  build_comfyui_rocm.yml  build_comfyui_xpu.yml  build_fooocus.yml  build_invokeai.yml  build_invokeai_test.yml  build_kohya_gui.yml  build_musubi_tuner.yml  build_qwen_tts_webui.yml  build_sd_next.yml  build_sd_scripts.yml  build_sd_trainer.yml  build_sd_trainer_next.yml  build_sd_trainer_script.yml  build_sd_webui.yml  build_sd_webui_forge.yml  build_sd_webui_forge_classic.yml  build_sd_webui_forge_neo.yml  build_sd_webui_forge_neo_rocm.yml  build_sd_webui_forge_neo_xpu.yml  build_sd_webui_reforge.yml  check_version.yaml  docs.yml  lint.yaml  pwsh-lint.yml  py-lint.yml  pypi-release.yml  pytest.yml  release.yml  sync_repo.yml  test.yml  update-windows-portable-installer.yml  update_portable_release_note.yml
cli/: index.html
cli/comfyui/: index.html
cli/env/: index.html
cli/fooocus/: index.html
cli/invokeai/: index.html
cli/manager/: index.html
cli/qwen-tts-webui/: index.html
cli/sd-scripts/: index.html
cli/sd-trainer/: index.html
cli/sd-webui/: index.html
config/: comfy.settings.json  fooocus_zh_cn.json  sd_webui_requirements_versions.txt
development/: index.html
development/adding-product/: index.html
development/architecture/: index.html
development/coding-style/: index.html
development/installer/: index.html
development/notebook/: index.html
development/python-core/: index.html
development/testing/: index.html
docs/: cli.md  comfyui_installer.md  fooocus_installer.md  index.md  invokeai_installer.md  qwen_tts_webui_installer.md  sd_trainer_installer.md  sd_trainer_script_installer.md  stable_diffusion_webui_installer.md
docs-old/: cli.md  fooocus_installer.md  invokeai_installer.md  sd_trainer_installer.md  sd_trainer_script_installer.md
docs/cli/: comfyui.md  env.md  fooocus.md  index.md  invokeai.md  manager.md  qwen-tts-webui.md  sd-scripts.md  sd-trainer.md  sd-webui.md
docs/development/: adding-product.md  architecture.md  coding-style.md  index.md  installer.md  notebook.md  python-core.md  (+1 more)
installer/: comfyui_installer.ps1  configure_env.bat  fooocus_installer.ps1  index.html  install_embed_python.ps1  invokeai_installer.ps1  qwen_tts_webui_installer.ps1  sd_trainer_installer.ps1  sd_trainer_script_installer.ps1  stable_diffusion_webui_installer.ps1
javascripts/: giscus.js
notebook/: comfyui_colab.ipynb  fooocus_colab.ipynb  hdm_train_kaggle.ipynb  index.html  invokeai_colab.ipynb  qwen_tts_webui_colab.ipynb  ruff.toml  sd_scripts_colab.ipynb  sd_scripts_kaggle.ipynb  sd_trainer_colab.ipynb  sd_trainer_scripts_kaggle.ipynb  sd_webui_all_in_one.ipynb  sd_webui_all_in_one_colab.ipynb  stable_diffusion_webui_colab.ipynb
portable/: index.html
quick-start/: index.html
sd_webui_all_in_one/: __init__.py  ansi_color.py  archive_manager.py  cmd.py  colab_tools.py  config.py  custom_exceptions.py  downloader.py  env.py  env_manager.py  file_manager.py  git_warpper.py  kaggle_tools.py  logger.py  mirror_manager.py  optional_dependency.py  pkg_manager.py  portable_manager.py  proxy.py  pytorch_mirror.py  repo_manager.py  retry_decorator.py  simple_tqdm.py  toml_parser.py  tunnel.py  updater.py  utils.py  version.py
tests/: test_base_manager_core.py  test_base_manager_shared_more.py  test_comfy_registry.py  test_comfyui_env_analyze_more.py  test_configure_comfyui_manager.py  test_conflict_detection.py  test_core_entrypoints_and_parsers.py  test_downloader_file_ops.py  test_env_check_gpu_repo_more.py  test_env_check_installers_more.py  test_env_check_more.py  test_env_mirror_cmd_retry.py  test_git_pkg_updater.py  test_gui_inputs.py  test_hotpatcher_manager.py  test_installer_scripts.py  test_invokeai_launcher.py  test_logger.py  test_low_level_downloaders.py  test_model_manager.py  test_model_repo_manager.py  test_optimize_proxy_cloud_utils.py  test_package_analyzer.py  test_patcher_runtime_smoke.py  test_portable_manager.py  test_product_base_managers.py  test_product_cli_smoke.py  test_product_managers_more.py  test_product_notebook_managers.py  test_pytorch_manager.py  test_pytorch_manager_more.py  test_requirement_normalizer_more.py  test_snapshot.py  test_tunnel_implementations.py  test_tunnel_notebook_cli.py  test_version_manager.py
tools/: index.html
(+394 files in other folders)
