[build-system]
requires = ["setuptools", "pip", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-webui-all-in-one"
description = "支持部署和管理多种 WebUI 的工具"
requires-python = ">=3.10"
readme = { content-type = "text/markdown", file = "README.md" }
license = "GPL-3.0"
dynamic = ["version"]
authors = [ {name = "licyk"} ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
archive = [
    "zstandard",
    "py7zr",
    "rarfile",
]
network = [
    "requests",
    "tqdm",
]
models = [
    "modelscope",
    "huggingface_hub",
]
download = [
    "zstandard",
    "py7zr",
    "rarfile",
    "requests",
    "tqdm",
    "modelscope",
    "huggingface_hub",
]
tunnel = [
    "pyngrok",
    "pycloudflared",
    "gradio-tunneling",
]
full = [
    "zstandard",
    "py7zr",
    "rarfile",
    "requests",
    "tqdm",
    "modelscope",
    "huggingface_hub",
    "pyngrok",
    "pycloudflared",
    "gradio-tunneling",
]

[dependency-groups]
docs = [
    "zensical",
]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    { include-group = "docs" },
    { include-group = "test" },
    "python-docstring-checker @ git+https://github.com/licyk/python-docstring-checker.git@main",
    "IPython",
    "ruff",
    "torch",
    "ty",
    "uvicorn",
    "zstandard",
    "py7zr",
    "rarfile",
    "requests",
    "tqdm",
    "modelscope",
    "huggingface_hub",
]

[project.scripts]
"sd-webui-all-in-one" = "sd_webui_all_in_one.cli_manager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sd_webui_all_in_one*"]
exclude = ["tests*", "docs*", "*__pycache__*", "*.pyc", "*.pyo", "*.pyd", ".git*", "__pycache__"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.conf", "*.tcl", "*.png", "LICENSE", "README.md", "libtcmalloc_minimal.so.4"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo", "*.pyd", ".git*", ".github*", "tests*", "docs*"]

[tool.setuptools.dynamic]
version = { attr = "sd_webui_all_in_one.version.VERSION" }

[tool.pylint]
disable = [
    "missing-timeout",
    "too-many-lines",
    "import-outside-toplevel",
    "broad-exception-caught",
    "broad-exception-raised",
    "subprocess-run-check",
    "keyword-arg-before-vararg",
    "fixme"
]

[tool.pylint.format]
max-line-length = 200
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"

[tool.ruff]
line-length = 200
indent-width = 4
lint.ignore = [
    "E402" # module-import-not-at-top-of-file
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.python-docstring-checker]
strictness = "balanced"
format = "text"
show-source = false
source-context = 1
exclude = [
    "sd_webui_all_in_one/base_manager/gui/sv_ttk/*",
    "sd_webui_all_in_one/patcher/examples/*",
]

[tool.ty.environment]
python-version = "3.10"
extra-paths = ["sd_webui_all_in_one/patcher"]

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = [
    "sd_webui_all_in_one/base_manager/gui/sv_ttk/*",
    "sd_webui_all_in_one/patcher/examples/*",
]

[tool.pytest.ini_options]
norecursedirs = [
    "sd_webui_all_in_one/base_manager/gui/sv_ttk",
]
markers = [
    "coverage_trace_conflict: tests that install process-wide tracing hooks and must run outside pytest-cov tracing",
]

[tool.coverage.run]
source = ["sd_webui_all_in_one"]
omit = [
    "sd_webui_all_in_one/base_manager/gui/*",
    "sd_webui_all_in_one/base_manager/gui/sv_ttk/*",
    "sd_webui_all_in_one/base_manager/gui/sv_ttk/theme/*",
    "sd_webui_all_in_one/patcher/examples/*",
    "sd_webui_all_in_one/patcher/tests/*",
]

[tool.coverage.report]
skip_covered = true
